@@ -1,5 +1,11 @@
 2002-11-02  John Harper  <jsh@unfactored.org>
 
+	* sawfish/wm/menus.jl: added some more accelerators
+	* sawfish/wm/workspace.jl (static-workspace-menus): added a few
+	accelerators (for #76286)
+
+2002-11-02  John Harper  <jsh@unfactored.org>
+
 	* sawfish/wm/gaol.jl: added get-font-typed, font-type-exists-p
 	and font-name functions
 
